--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,27 @@ version: "3.8"
 
 x-env-vars:
   &env-vars
+  VERSION: "${VERSION}"
   TZ: "${TZ}"
+  ENVIRONMENT: "${ENVIRONMENT:-production}"
+  PYTHONPATH: "${PYTHONPATH}"
+
+  CNF_HOST: "${CNF_HOST}"
+  CNF_PORT: "${CNF_PORT}"
+  APP_HOST: "${APP_HOST}"
+  APP_PORT: "${APP_PORT}"
+
+  OAUTH_SECRET: "${OAUTH_SECRET}"
+  OAUTH_EXPIRATION_DAYS: "${OAUTH_EXPIRATION_DAYS}"
+
+  MONGODB_USERNAME: "${MONGODB_USERNAME}"
+  MONGODB_PASSWORD: "${MONGODB_PASSWORD}"
+  MONGODB_HOST: "${MONGODB_HOST}"
+  MONGODB_PORT: "${MONGODB_PORT}"
+  MONGODB_DATABASE: "${MONGODB_DATABASE}"
+  MONGODB_ROOT_DATABASE: "${MONGODB_ROOT_DATABASE}"
+
+  MONGODB_DATABASE_ACCOUNT: "${MONGODB_DATABASE_ACCOUNT}"
 
   RABBITMQ_USER: "${RABBITMQ_USER}"
   RABBITMQ_PASSWORD: "${RABBITMQ_PASSWORD}"
@@ -12,34 +32,37 @@ x-env-vars:
   RABBITMQ_VHOST: "${RABBITMQ_VHOST}"
   RABBITMQ_EXCHANGE: "${RABBITMQ_EXCHANGE}"
 
-  MONGODB_USERNAME: "${MONGODB_USERNAME}"
-  MONGODB_PASSWORD: "${MONGODB_PASSWORD}"
-  MONGODB_HOST: "${MONGODB_HOST}"
-  MONGODB_PORT: "${MONGODB_PORT}"
-  MONGODB_DATABASE: "${MONGODB_DATABASE}"
-  MONGODB_ROOT_DATABASE: "${MONGODB_ROOT_DATABASE}"
-
-  OAUTH_SECRET: "${OAUTH_SECRET}"
-  OAUTH_EXPIRATION_DAYS: "${OAUTH_EXPIRATION_DAYS}"
-
-  HTTP_PORT: 80
+  RABBITMQ_EXCHANGE_ACCOUNT: "${RABBITMQ_EXCHANGE_ACCOUNT}"
 
 networks:
   example:
     external: true
 
+x-services-config:
+  &services-config
+  environment:
+    <<: *env-vars
+  networks:
+    - example
+
 services:
-  app_http:
-    container_name: app_http
-    image: ${REGISTRY}/http:${VERSION}
-    expose:
-      - 80
+  cnf:
+    container_name: cnf
+    <<: *services-config
     build:
       context: .
       dockerfile: docker/python/Dockerfile
-      target: production
-    environment:
-      <<: *env-vars
-    command: "src/apps/app_http/__main__.py"
-    networks:
-      - example
+      target: cnf_cli_production
+    image: ${REGISTRY}/cnf:${VERSION}
+    restart: "no"
+
+  app:
+    container_name: app
+    <<: *services-config
+    image: ${REGISTRY}/app:${VERSION}
+    build:
+      context: .
+      dockerfile: docker/python/Dockerfile
+      target: app_http_production
+    expose:
+      - "${APP_PORT}"
