--- a/.env
+++ b/.env
@@ -1,41 +1,53 @@
-REGISTRY=docker.pkg.github.com/ticdenis/python-skeleton
+REGISTRY=docker.pkg.github.com/ticdenis/example
 VERSION=latest
 TZ=Europe/Madrid
 ENVIRONMENT=development
-
-HTTP_PORT=80
 PYTHONPATH=.
+
+CNF_HOST=cnf
+CNF_PORT=81
+APP_HOST=app
+APP_PORT=80
 
 OAUTH_SECRET=secret
 OAUTH_EXPIRATION_DAYS=14
-SERVICE_CONFIGURATOR_HOST=service_configurator_http
 
 MONGODB_ROOT_USERNAME=example
 MONGODB_USERNAME=example
 MONGODB_ROOT_PASSWORD=secret
 MONGODB_PASSWORD=secret
-MONGODB_HOST=mongodb
+MONGODB_HOST=example_mongodb
 MONGODB_PORT=27017
 MONGODB_DATABASE=example
 MONGODB_ROOT_DATABASE=admin
+
+MONGODB_DATABASE_ACCOUNT=example_account
 
 RABBITMQ_ROOT_USER=example
 RABBITMQ_USER=example
 RABBITMQ_ROOT_PASSWORD=secret
 RABBITMQ_PASSWORD=secret
-RABBITMQ_HOST=rabbitmq
+RABBITMQ_HOST=example_rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_UI_PORT=15672
 RABBITMQ_ROOT_VHOST=example
 RABBITMQ_VHOST=example
-RABBITMQ_EXCHANGE=example.account
+RABBITMQ_EXCHANGE=example
 RABBITMQ_ERLANG_COOKIE=example
+
+RABBITMQ_EXCHANGE_ACCOUNT=example.account
+
+# APP Debug mode
+
+DEBUG=0
+DEBUG_HOST=0.0.0.0
+DEBUG_PORT=5678
 
 AIO_ROOT=.
 AIO_HOST=localhost
 AIO_LIVERELOAD=1
 AIO_DEBUG_TOOLBAR=1
 AIO_APP_FACTORY=main
-AIO_PORT=80
+AIO_PORT=3000
 AIO_AUX_PORT=9999
 LIVE_RELOAD=0
