--- a/docker-compose.consumers.override.yml
+++ b/docker-compose.consumers.override.yml
@@ -1,13 +1,18 @@
 version: "3.8"
 
+x-env-vars:
+  &env-vars
+  ENVIRONMENT: "${ENVIRONMENT:-development}"
+
 x-consumer-config:
   &consumer-config
   build:
-    target: development
+    target: app_cli_development
   volumes:
     - .:/app
+  environment:
+    <<: *env-vars
 
 services:
   skeleton_cli_consumer_on_internal_user_deleted:
     <<: *consumer-config
-
