--- a/docker-compose.consumers.yml
+++ b/docker-compose.consumers.yml
@@ -2,39 +2,14 @@ version: "3.8"
 
 x-env-vars:
   &env-vars
-  TZ: "${TZ}"
-
-  RABBITMQ_USER: "${RABBITMQ_USER}"
-  RABBITMQ_PASSWORD: "${RABBITMQ_PASSWORD}"
-  RABBITMQ_HOST: "${RABBITMQ_HOST}"
-  RABBITMQ_PORT: "${RABBITMQ_PORT}"
-  RABBITMQ_UI_PORT: "${RABBITMQ_UI_PORT}"
-  RABBITMQ_VHOST: "${RABBITMQ_VHOST}"
-  RABBITMQ_EXCHANGE: "${RABBITMQ_EXCHANGE}"
-
-  MONGODB_USERNAME: "${MONGODB_USERNAME}"
-  MONGODB_PASSWORD: "${MONGODB_PASSWORD}"
-  MONGODB_HOST: "${MONGODB_HOST}"
-  MONGODB_PORT: "${MONGODB_PORT}"
-  MONGODB_DATABASE: "${MONGODB_DATABASE}"
-  MONGODB_ROOT_DATABASE: "${MONGODB_ROOT_DATABASE}"
-
-  OAUTH_SECRET: "${OAUTH_SECRET}"
-  OAUTH_EXPIRATION_DAYS: "${OAUTH_EXPIRATION_DAYS}"
-
-  HTTP_PORT: 80
-
-networks:
-  example:
-    external: true
+  _: "_"
 
 x-consumer-config:
   &consumer-config
-  image: ${REGISTRY}/cli:${VERSION}
   build:
     context: .
     dockerfile: docker/python/Dockerfile
-    target: production
+    target: app_cli_production
   restart: unless-stopped
   environment:
     <<: *env-vars
