--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -2,42 +2,64 @@ version: "3.8"
 
 x-env-vars:
   &env-vars
-  TZ: "${TZ}"
-
   MONGODB_ROOT_USERNAME: "${MONGODB_ROOT_USERNAME}"
-  MONGODB_USERNAME: "${MONGODB_USERNAME}"
   MONGODB_ROOT_PASSWORD: "${MONGODB_ROOT_PASSWORD}"
-  MONGODB_PASSWORD: "${MONGODB_PASSWORD}"
   MONGODB_HOST: "${MONGODB_HOST}"
   MONGODB_PORT: "${MONGODB_PORT}"
   MONGODB_ROOT_DATABASE: "${MONGODB_ROOT_DATABASE}"
 
   RABBITMQ_ROOT_USER: "${RABBITMQ_ROOT_USER}"
-  RABBITMQ_USER: "${RABBITMQ_USER}"
   RABBITMQ_ROOT_PASSWORD: "${RABBITMQ_ROOT_PASSWORD}"
-  RABBITMQ_PASSWORD: "${RABBITMQ_PASSWORD}"
   RABBITMQ_HOST: "${RABBITMQ_HOST}"
   RABBITMQ_PORT: "${RABBITMQ_PORT}"
   RABBITMQ_UI_PORT: "${RABBITMQ_UI_PORT}"
   RABBITMQ_ROOT_VHOST: "${RABBITMQ_ROOT_VHOST}"
+  RABBITMQ_EXCHANGE: "${RABBITMQ_EXCHANGE}"
   RABBITMQ_ERLANG_COOKIE: "${RABBITMQ_ERLANG_COOKIE}"
 
-  HTTP_PORT: 80
+volumes:
+  example_mongodb:
+    external: true
+  example_rabbitmq:
+    external: true
 
 networks:
   example:
     external: true
 
 services:
-  service_configurator_http:
-    container_name: service_configurator_http
-    build:
-      context: .
-      dockerfile: docker/python/Dockerfile
-      target: production
+  example_mongodb:
+    container_name: example_mongodb
+    image: mongo:4.2.9
+    volumes:
+      - example_mongodb:/data/db
+      - example_mongodb:/var/log/mongodb
+    restart: "unless-stopped"
+    ports:
+      - "${MONGODB_PORT}:${MONGODB_PORT}"
     environment:
       <<: *env-vars
-    restart: "no"
-    command: "src/apps/configurator_cli/__main__.py"
+      MONGO_INITDB_ROOT_USERNAME: "${MONGODB_ROOT_USERNAME}"
+      MONGO_INITDB_ROOT_PASSWORD: "${MONGODB_ROOT_PASSWORD}"
+      MONGO_INITDB_DATABASE: "${MONGODB_ROOT_DATABASE}"
+    networks:
+      - example
+
+  example_rabbitmq:
+    container_name: example_rabbitmq
+    image: rabbitmq:3.8.7-management-alpine
+    volumes:
+      - example_rabbitmq:/var/lib/rabbitmq
+      - example_rabbitmq:/var/log/rabbitmq
+    restart: "unless-stopped"
+    ports:
+      - "${RABBITMQ_PORT}:5672"
+      - "${RABBITMQ_UI_PORT}:15672"
+    environment:
+      <<: *env-vars
+      RABBITMQ_DEFAULT_VHOST: "${RABBITMQ_ROOT_VHOST}"
+      RABBITMQ_DEFAULT_USER: "${RABBITMQ_ROOT_USER}"
+      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_ROOT_PASSWORD}"
+      RABBITMQ_ERLANG_COOKIE: "${RABBITMQ_ERLANG_COOKIE}"
     networks:
       - example
