--- a/.env
+++ b/.env
@@ -51,3 +51,7 @@ AIO_APP_FACTORY=main
 AIO_PORT=3000
 AIO_AUX_PORT=9999
 LIVE_RELOAD=0
+
+ENABLE_EVENT_HANDLERS=1
+BEFORE_SCENARIO_SETUP=1
+AFTER_SCENARIO_CLEAN=1
