--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 REGISTRY=docker.pkg.github.com/ticdenis/project
+
+DEBUG=0
 ENVIRONMENT=development
 VERSION=latest
 TZ=UTC
@@ -7,6 +9,7 @@ OAUTH_SECRET=secret
 OAUTH_EXPIRATION_DAYS=14
 HTTP_HOST=0.0.0.0
 HTTP_PORT=8000
+MONGODB_PROTOCOL=mongodb
 MONGODB_ROOT_USERNAME=admin
 MONGODB_ROOT_PASSWORD=secret
 MONGODB_ROOT_DATABASE=admin
@@ -16,10 +19,10 @@ MONGODB_DATABASE=project
 MONGODB_HOST=mongodb # or 0.0.0.0 if you're using Docker locally
 MONGODB_PORT=27017
 DROP_MONGODB_DATABASE=
-EMAIL_HOST=mailhog # or 0.0.0.0 if you're using Docker locally
+EMAIL_HOST=mailhog
 EMAIL_PORT=1025
 EMAIL_HOST_USER=project
-EMAIL_HOST_PASSWORD=$2a$04$F4kCWV4Igs33ray8uc.jv.2GC5n145nUpBZ4qF/RTrWgKNrLgm8KO # secret
+EMAIL_HOST_PASSWORD='$2a$04$F4kCWV4Igs33ray8uc.jv.2GC5n145nUpBZ4qF/RTrWgKNrLgm8KO' # secret
 EMAIL_USE_TLS=0
 EMAIL_FROM=local@project.com
 EMAIL_UI_PORT=8025
