--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,15 +1,23 @@
-name: CI
+name: Pipeline
 
 on:
   push:
     branches:
+      - main
       - master
   pull_request:
 
+env:
+  REGISTRY: "localhost"
+  VERSION: ${{ github.sha }}
+  LOCAL: 0
+
 jobs:
-  CI:
-    timeout-minutes: 15
+  ContinuosIntegration:
+    timeout-minutes: 16
     runs-on: ${{ matrix.os }}
+    env:
+      DEPLOY: 0
     strategy:
       matrix:
         os: [ ubuntu-latest ]
@@ -17,29 +25,21 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.9.0'
-      - name: Run actions/setup-docker@macos-latest
-        uses: docker-practice/actions-setup-docker@1.0.2
-        if: ${{ matrix.os == 'macos-latest' }}
+          python-version: '3.9.7'
       - name: Run actions/setup-docker-compose@v2
-        run: pip3 install docker-compose
-
-      - name: build
-        timeout-minutes: 5
-        run: |
-          docker login docker.pkg.github.com --username "${{github.actor}}" --password "${{github.token}}"
-          make build
-      - name: deps
-        timeout-minutes: 1
-        run: make deps
-
-      - name: start
-        timeout-minutes: 1
-        run: make start
+        run: mkdir -p $HOME/bin && curl -L "https://github.com/docker/compose/releases/download/`curl -fsSLI -o /dev/null -w %{url_effective} https://github.com/docker/compose/releases/latest | sed 's#.*tag/##g' && echo`/docker-compose-$(uname -s)-$(uname -m)" -o $HOME/bin/docker-compose && chmod +x $HOME/bin/docker-compose
 
       - name: validate-docker
         timeout-minutes: 1
         run: make validate-docker
+
+      - name: build
+        timeout-minutes: 5
+        run: make build
+
+      - name: start
+        timeout-minutes: 2
+        run: make start
 
       - name: security-analysis
         timeout-minutes: 1
@@ -59,6 +59,4 @@ jobs:
 
       - name: clean
         timeout-minutes: 1
-        run: |
-          make clean
-          docker logout docker.pkg.github.com
+        run: make clean
