--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: master
+    rev: v2.18.1
     hooks:
       - id: commitizen
         stages: [ commit-msg ]
@@ -23,7 +23,8 @@ repos:
         language: system
         stages: [ commit-msg ]
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: master
+    rev: v4.0.1
     hooks:
       - id: no-commit-to-branch
         stages: [ commit-msg ]
+        args: [ --branch, master ]
