--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,10 @@
 name = "python-skeleton"
 version = "0.0.0"
 description = "python-skeleton is a project based on best practices to start API and CLI apps with Python."
+license = "MIT"
+authors = []
+readme = "README.md"
+include = ["LICENSE", "README.md"]
 
 [build-system]
 build-backend = "setuptools.build_meta"
@@ -19,6 +23,8 @@ profile = "black"
 authorized_licenses = [
     "Python", "Python Software Foundation", "bsd", "mit", "gpl", "lgpl", "apache software", "mpl-2.0", "hpnd",
     "apache license 2.0", "psf", "mozilla public license 2.0 (mpl 2.0)", "gnu general public license (gpl)",
+    "GNU Lesser General Public License v2 (LGPLv2)", "ISC License (ISCL)", "Public Domain",
+    "GNU General Public License v2 (GPLv2)"
 ]
 unauthorized_licenses = []
 [tool.liccheck.authorized_packages]
@@ -29,7 +35,7 @@ filelock = "3.0.12"
 jobs = "0"
 extension-pkg-whitelist = "motor,pydantic"
 [tool.pylint.messages_control]
-disable = "C0103,C0111,C0205,C0301,E0401,E0611,E1101,E1120,E1136,E1601,R0201,R0801,R0902,R0903,R0904,R0912,R0913,R0914,R0915,R0916,R1705,W0107,W0108,W0201,W0212,W0221,W0603,W0622,W0102"
+disable = "C0103,C0111,C0205,C0301,E0401,E0611,E1101,E1120,E1136,E1601,R0201,R0801,R0902,R0903,R0904,R0912,R0913,R0914,R0915,R0916,R1705,W0102,W0107,W0108,W0201,W0212,W0221,W0237,W0603,W0622,W0640"
 
 [tool.pytest.ini_options]
 cache_dir = "var/cache/.pytest_cache"
