--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,19 +1,20 @@
 -r requirements.txt
-autoflake>=1.4
-bandit>=1.7.0
-black>=20.8b1
-commitizen>=2.14.0
-faker>=5.8.0
-httpx>=0.16.1
-isort>=5.7.0
-liccheck>=0.4.9
-mypy>=0.800
-pre-commit>=2.10.0
-psutil>=5.8.0
-pylint>=2.6.0
-pytest>=6.2.2
-pytest-asyncio>=0.14.0
-pytest-cov>=2.11.1
-pytest-xdist>=2.2.0
-requests>=2.25.1
-shellcheck-py>=0.7.1.1
+autoflake==1.4
+bandit==1.7.0
+black==21.10b0
+commitizen==2.20.0
+faker==9.8.0
+httpx==0.19.0
+isort==5.10.1
+liccheck==0.6.2
+mypy==0.910
+pre-commit==2.15.0
+psutil==5.8.0
+pylint==2.11.1
+pytest==6.2.5
+pytest-asyncio==0.16.0
+pytest-cov==3.0.0
+pytest-xdist==2.4.0
+pytoml==0.1.21
+shellcheck-py==0.7.2.1
+types-orjson==3.6.1
