--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-aiocli>=1.4.8
-aioddd>=1.2.12
-aiofiles>=0.6.0
-authlib>=0.15.3
-bcrypt>=3.2.0
-fastapi>=0.63.0
-motor>=2.3.0
-orjson>=3.4.7
-python-multipart>=0.0.5
-retry>=0.9.2
-uvicorn>=0.13.3
-validators>=0.18.1
+aiocli==1.5.3
+aioddd==1.3.0
+aiodi==1.0.0
+authlib==0.15.5
+bcrypt==3.2.0
+dnspython==2.1.0
+fastapi==0.70.0
+motor==2.5.1
+orjson==3.6.4
+pymongo==3.12.1
+python-multipart==0.0.5
+opnieuw==1.1.0
+pydantic==1.8.2 # depends on fastapi
+starlette==0.16.0 # depends on fastapi
+uvicorn==0.15.0
+validators==0.18.2
